--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.7.0
   sensors_plus: ^2.0.1
   syncfusion_flutter_charts: ^20.3.52
+  firebase_auth: ^4.2.2
 
 dev_dependencies:
   flutter_test:
