--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   sensors_plus: ^2.0.1
   syncfusion_flutter_charts: ^20.3.52
   firebase_auth: ^4.2.2
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
