--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   syncfusion_flutter_charts: ^20.3.52
   firebase_auth: ^4.2.2
   http: ^0.13.5
+  shared_preferences: ^2.1.0
 
 dev_dependencies:
   flutter_test:
