Add Activity-Recogntion-KNN-Model-in-Flask submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "path/to/submodule/folder"]
 	path = path/to/submodule/folder
 	url = https://github.com/psathyanarayan/Activity-Recogntion-KNN-Model-in-Flask.git
+[submodule "MLModel"]
+	path = MLModel
+	url = https://github.com/psathyanarayan/Activity-Recogntion-KNN-Model-in-Flask.git
